perf: 테스트 병렬화
각 테스트는 독립된 DB를 사용하므로, 병렬처리하여도 테스트 결과에 영향을 주지 않습니다.

--- a/deno.jsonc
+++ b/deno.jsonc
@@ -2,7 +2,8 @@
 	"tasks": {
 		"dev": "deno run -A --watch main.ts",
 		"prod": "deno run --allow-read --allow-write --allow-net=0.0.0.0:3000 main.ts",
-		"test": "deno test -A --watch --no-check",
+		"test:no-check": "deno task test --no-check",
+		"test": "deno test -A --parallel --shuffle --watch",
 
 		// test.db의 DB 스키마를 초기화합니다.
 		"db:migrate": "deno run -A migrate.ts test.db",
