fix: `exactOptionalPropertyTypes` 비활성화
`z.optional()`과  `Hono`의 `c.req.valid`와 충돌을 일으켜 임시로 비활성화했습니다.

--- a/deno.jsonc
+++ b/deno.jsonc
@@ -22,7 +22,7 @@
 	},
 	"importMap": "./import_map.json",
 	"compilerOptions": {
-		"exactOptionalPropertyTypes": true,
+		"exactOptionalPropertyTypes": false,
 		"noErrorTruncation": true
 	}
 }
