build: 의존성 버전 고정

--- a/deno.jsonc
+++ b/deno.jsonc
@@ -20,6 +20,7 @@
 		"lineWidth": 100,
 		"proseWrap": "never"
 	},
+    "nodeModulesDir": false,
 	"importMap": "./import_map.json",
 	"compilerOptions": {
 		"exactOptionalPropertyTypes": false,
